opam-version: "2.0"
synopsis: "External deps for the SkyLabs AI toolchain"
maintainer: [
  "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
  "Jan-Oliver Kaiser <janno@skylabs-ai.io>"
]
authors: [
  "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>"
  "Jan-Oliver Kaiser <janno@skylabs-ai.io>"
]
license: "LGPL-2.1-only"
homepage: "https://github.com/SkylabsAI/fm-ci"
bug-reports: "https://github.com/SkylabsAI/fm-ci/issues"
depends: [
  "angstrom"
  "astring"
  "atd"
  "atdgen"
  "atdgen-runtime"
  "atdts"
  "base"
  "base-bigarray"
  "base-bytes"
  "base-domains"
  "base-effects"
  "base-nnp"
  "base-threads"
  "base-unix"
  "base_bigstring"
  "base_quickcheck"
  "bheap"
  "bigstringaf"
  "bin_prot"
  "biniou"
  "bos"
  "camlp-streams"
  "camlzip"
  "capitalization"
  "chrome-trace"
  "cmdliner"
  "conf-gmp"
  "conf-libffi"
  "conf-linux-libc-dev" {= "0" & os = "linux"}
  "conf-pkg-config"
  "conf-zlib"
  "core"
  "core_kernel"
  "core_unix"
  "cppo"
  "crunch"
  "csexp"
  "ctypes"
  "ctypes-foreign"
  "dot-merlin-reader"
  "dune"
  "dune-build-info"
  "dune-configurator"
  "dune-rpc"
  "dyn"
  "easy-format"
  "either"
  "expect_test_helpers_core"
  "fiber"
  "fieldslib"
  "fileutils"
  "fix"
  "fmt"
  "fpath"
  "fs-io"
  "gel"
  "gen"
  "ISO8601"
  "int_repr"
  "integers"
  "jane-street-headers"
  "js_of_ocaml"
  "js_of_ocaml-compiler"
  "js_of_ocaml-ppx"
  "jsonrpc"
  "jst-config"
  "logs"
  "lsp"
  "lwt"
  "memprof-limits"
  "memtrace"
  "menhir"
  "menhirCST"
  "menhirGLR"
  "menhirLib"
  "menhirSdk"
  "merlin"
  "merlin-lib"
  "mtime"
  "num"
  "ocaml"
  "ocaml-compiler"
  "ocaml-compiler-libs"
  "ocaml-config"
  "ocaml-index"
  "ocaml-lsp-server"
  "ocaml-option-flambda"
  "ocaml-option-fp" {= "1" & (os = "linux" | os = "macos") & arch = "x86_64"}
  "ocaml-syntax-shims"
  "ocaml-variants"
  "ocaml-version"
  "ocaml_intrinsics_kernel"
  "ocamlbuild"
  "ocamlc-loc"
  "ocamlfind"
  "ocamlformat"
  "ocamlformat-lib"
  "ocamlformat-rpc-lib"
  "ocp-indent"
  "ocplib-endian"
  "octavius"
  "odoc"
  "odoc-parser"
  "ordering"
  "parsexp"
  "patdiff"
  "patience_diff"
  "pp"
  "ppx_assert"
  "ppx_base"
  "ppx_bench"
  "ppx_bin_prot"
  "ppx_cold"
  "ppx_compare"
  "ppx_custom_printf"
  "ppx_derivers"
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ppx_diff"
  "ppx_disable_unused_warnings"
  "ppx_enumerate"
  "ppx_expect"
  "ppx_fields_conv"
  "ppx_fixed_literal"
  "ppx_globalize"
  "ppx_hash"
  "ppx_here"
  "ppx_ignore_instrumentation"
  "ppx_import"
  "ppx_inline_test"
  "ppx_jane"
  "ppx_js_style"
  "ppx_let"
  "ppx_log"
  "ppx_module_timer"
  "ppx_optcomp"
  "ppx_optional"
  "ppx_pipebang"
  "ppx_sexp_conv"
  "ppx_sexp_message"
  "ppx_sexp_value"
  "ppx_stable"
  "ppx_stable_witness"
  "ppx_string"
  "ppx_string_conv"
  "ppx_tydi"
  "ppx_typerep_conv"
  "ppx_variants_conv"
  "ppx_yojson_conv"
  "ppx_yojson_conv_lib"
  "ppxlib"
  "ppxlib_jane"
  "ptime"
  "ptmap"
  "ptset"
  "re"
  "rresult"
  "sedlex"
  "sel"
  "seq"
  "sexp_pretty"
  "sexplib"
  "sexplib0"
  "spawn"
  "splittable_random"
  "stdio"
  "stdlib-shims"
  "stdune"
  "stringext"
  "time_now"
  "timezone"
  "toml"
  "top-closure"
  "topkg"
  "typerep"
  "tyxml"
  "uopt"
  "uri"
  "uucp"
  "uuseg"
  "uutf"
  "variantslib"
  "xdg"
  "yaml"
  "yojson"
  "zarith"
  "zarith_stubs_js"
]
build: []
