(lang dune 3.21)
(name dune-commands)
(generate_opam_files true)

(source (github SkylabsAI/workspace))
(authors "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(maintainers "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(license LGPL-2.0-or-later)

(package
 (name dune-commands)
 (synopsis "Library for extracting run commands from a dune trace")
 (depends
  cmdliner
  ppx_deriving_yojson))

(subst disabled)
