(include_subdirs qualified)
(rocq.theory
    (name step2_cpp_two_loopinvgo_rerun_promptupd_persona_v2__shared__dede18dc.proof) ; logical path of this library
    (package step2_cpp_two_loopinvgo_rerun_promptupd_persona_v2__shared__dede18dc)
    (theories Lens Lens.Elpi Equations Equations.Prop Equations.Type Stdlib skylabs iris stdpp elpi elpi_elpi ExtLib Ltac2 skylabs.upoly skylabs.cpp.stdlib step2_cpp_two_loopinvgo_rerun_promptupd_persona_v2__shared__dede18dc.src))
